# astranova-client-rust

./: .gitignore  Cargo.toml  LICENSE  README.md  RELEASE_NOTES.md  build.rs  ¡
.github/workflows/: ci.yml
assets/: icon.icns
src/: error.rs  main.rs  utils.rs
src/data/: auth.rs  auth_input.rs  mod.rs  oauth2.rs
src/export/: postman.rs
src/http_client/: client.rs  config.rs  mod.rs  request.rs  response.rs  snippets.rs
src/import/: curl.rs  postman.rs
src/openapi/: collection_generator.rs  mod.rs  models.rs  parser.rs
src/persistence/: database.rs
src/protocols/: graphql.rs  mod.rs  websocket.rs
src/services/: collection_service.rs  environment_service.rs  history_service.rs  mod.rs  request_restoration.rs
src/ui/: app.rs  mod.rs  request_status.rs  theme.rs  toast.rs
src/ui/components/: auth_panel.rs  key_value_editor.rs  mod.rs
src/ui/handlers/: collection.rs  environment.rs  graphql.rs  history.rs  mod.rs  oauth2.rs  websocket.rs
src/ui/views/: collection_view.rs  environment_manager.rs  graphql_view.rs  history_view.rs  http_request_view.rs  mod.rs  websocket_view.rs
wix/: main.wxs
