[package]
name = "astranova-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = { version = "0.12.0", features = ["tokio", "image", "advanced"] }
tokio = { version = "1.38.0", features = ["full"] }
reqwest = { version = "0.12.5", features = ["json"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.118"
async-graphql = { version = "7.0.4", features = ["url", "tracing"] }
reqwest-graphql = "1.0.0"
http = "1.0.0"
iced_aw = { version = "0.9.0", features = ["tabs"] }
urlencoding = "2.1.3"

image = "0.25.1"
arboard = "3.2.0"

[package.metadata.bundle]
name = "AstraNova"
identifier = "com.astranova.client"
icon = ["assets/icon.png"]
version = "0.1.0"
copyright = "Copyright (C) AstraNova 2025"
category = "Developer Tool"
short_description = "A simple HTTP client."