[package]
name = "astranova-client"
version = "0.2.1-beta.1"
edition = "2021"
authors = ["vant3x"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = { version = "0.14.0", features = ["tokio", "image", "svg", "canvas", "highlighter"] }
iced_aw = { version = "0.13.1", features = ["tabs", "tab_bar", "context_menu"] }


bytes = "1.0.0"
tokio = { version = "1.38.0", features = ["full"] }
reqwest = { version = "0.12.5", features = ["json", "multipart"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.118"
serde_yaml = "0.9"
md5 = "0.7"
thiserror = "2"
log = "0.4"
env_logger = "0.11"
http = "1.0.0"
url = "2.5"
urlencoding = "2.1.3"

image = "0.25.1"
arboard = "3.2.0"
base64 = "0.22.1"
rusqlite = { version = "0.31.0", features = ["serde_json", "bundled"] }
directories = "5.0.1"
rfd = "0.4.1"
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
futures-util = "0.3"
futures = { version = "0.3", features = ["alloc"] }
chrono = "0.4"
iced_futures = "0.14.0"
sha2 = "0.10"
rand = "0.8"
open = "5"
iced_fonts = { version = "0.3.0", features = ["lucide"] }

[dependencies.zbus]
version = ">=5.0, <5.12"
default-features = false
features = ["tokio"]

[build-dependencies]
# Embeds the app icon into the Windows .exe resource section.
# Only used when cross-compiling or building natively on Windows.
winresource = "0.1"

[package.metadata.bundle]
name = "AstraNova"
identifier = "com.astranova.client"
icon = ["assets/icon.png", "assets/icon.ico"]
version = "0.2.0"
copyright = "Copyright (C) AstraNova 2025"
category = "Developer Tool"
short_description = "A simple HTTP client."

[package.metadata.bundle.mac_os_x]
icon = ["assets/icon.icns"]

[package.metadata.bundle.windows]
icon = ["assets/icon.ico"]

osx_frameworks = []
osx_minimum_system_version = "10.11"
windows_console_mode = false  

deb_depends = [
    "libxkbcommon0", 
    "libwayland-client0",
    "libxrandr2",
    "libxcursor1",
    "libxi6",
    "libxinerama1"
]

license = "MIT" 
homepage = "https://astranova-client.vercel.app/"
repository = "https://github.com/vant3x/astranova-client-rust" 
